Hey there! I am thrilled to announce that I have finalized my top pick for the Screen UI and Logic. It's been an exciting journey and I cannot wait to share my choice with you!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="gps_settings_text">GPS is not</string>
     <string name="settings_button_ok">settings</string>
     <string name="settings_button_cancel">no</string>
+    <string name="search_quran_string">البحث في اَلْقُرْآن اَلْكَرِيمِ</string>
 </resources>
